# vlm-inference-lab

./: .env.lambda.example  .env.runpod.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/backends/: vllm.yaml
configs/experiments/: serving_smoke.yaml
docs/: README.md
docs/architectures/: neural_architecture_tradeoffs.md  rnn_lstm_gru_and_gradient_stability.md  sequential_models.md  vision_models.md
docs/cuda/: cuda_memory_model.md  cuda_vs_hip.md  inference_kernel_bottlenecks.md  kernel_execution.md  shared_vs_global_memory.md
docs/deployment/: lambda_demo.md  runpod_demo.md
docs/evaluation/: vlm_evaluation_and_slos.md
docs/fundamentals/: activation_functions.md  decision_trees.md  ensemble_methods.md  feature_engineering_and_representations.md  gradient_boosted_trees.md  linear_models_and_losses.md  model_evaluation_and_generalization.md  model_selection_and_use_cases.md  optimization_and_backprop.md  random_forests.md
docs/inference/: advanced_serving_features.md  batching.md  kv_cache.md  lambda_demo.md  latency_vs_throughput.md  runpod_demo.md  training_vs_inference.md
docs/ml/: activation_functions.md  decision_trees.md  feature_engineering_and_representations.md  linear_models_and_losses.md  (+10 more)
scripts/: benchmark_remote.ps1  benchmark_remote.sh  benchmark_vllm_bench.ps1  benchmark_vllm_bench.sh  benchmark_vllm_sweep.ps1  benchmark_vllm_sweep.sh  demo_end_to_end.ps1  demo_end_to_end.sh  demo_lambda_end_to_end.ps1  demo_lambda_end_to_end.sh  demo_runpod_end_to_end.ps1  demo_runpod_end_to_end.sh  start_vllm_remote.sh
(+82 files in other folders)
