[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm_inference_lab"
version = "0.1.0"
description = "A compact technical lab exploring inference optimization for multimodal systems."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Florian Barras", email = "florian@barras.io"}
]
dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
bench = [
    "vllm>=0.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
]
runpod = [
    "runpod>=1.5.0",
]

[tool.setuptools.package-dir]
vlm_inference_lab = "source/vlm_inference_lab"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["source"]
